# human.mpi

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  usage.cpp
.github/workflows/: cmake.yml
examples/: bcast.cpp  send.cpp
inc/: communicator.hpp  datatype.hpp  timer.hpp
include/human/: communicator.hpp  mpi.hpp  timer.hpp
tests/: no-mpi.cpp
